3. Added function Test-ResponseTime.
4. In Stop-Database added MongoDB as a database product to stop. Also added Stop-MongoDB alias.
5. Added snippet for Alias attribute in powershell.json.
6. Removed New-Alias from all functions and replaced with Alias attribute.

######################
#                    #
#      2022.12       #
#                    #
######################
New features and other changes:
1. Added Merge-File alias to Join-File function based on feedback.
2. Added function Install-VMwareTools.
3. Added UTC date string to output of Install-Patches function (InstallRemote.ps1) so you can see when things were done.
4. Added check on install functions so if running remotely it doesn't try to copy the install files first since it will give an access denied error.
5. Added function Uninstall-ActivClient.
6. Fixed an issue in InstallRemote.ps1 that caused it to always trigger an install of ActivClient - which if already installed would cause it to uninstall. Also, if the install is triggered now it stops Axway before the install and starts it after to resolve conflicts with the install.

######################
#                    #
#      2022.11       #
#                    #
######################
New features and other changes:
1. Added Test-MTU.
2. Added Get-HttpHeaderSetting.

######################
#                    #
#      2022.10       #
#                    #
######################
New features and other changes:
1. Added support for Windows 10/11 version 22H2.

######################
#                    #
#      2022.09       #
#                    #
######################
New features and other changes: